--- a/x360ce.App.Beta/Controls/PadItem_ButtonsControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ButtonsControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.AxisToButtonListControl"
+	x:Class="x360ce.App.Controls.PadItem_ButtonsControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
