--- a/x360ce.App.Beta/Controls/PresetsControl.xaml
+++ b/x360ce.App.Beta/Controls/PresetsControl.xaml
@@ -27,7 +27,7 @@
 			VerticalAlignment="Stretch"
 			SelectionChanged="MainTabControl_SelectionChanged">
 			<TabItem x:Name="SettingsTabPage" Header="My Settings">
-				<local:SettingsListControl x:Name="SettingsGridPanel" />
+				<local:UserSettingListControl x:Name="SettingsGridPanel" />
 			</TabItem>
 			<TabItem x:Name="SummariesTabPage" Header="Default Settings for My Controllers">
 				<local:SummariesListControl x:Name="SummariesGridPanel" />
