--- a/x360ce.App.Beta/Controls/UserSettingListControl.xaml
+++ b/x360ce.App.Beta/Controls/UserSettingListControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.ProgramListControl"
+	x:Class="x360ce.App.Controls.UserSettingListControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:converters="clr-namespace:x360ce.App.Converters"
@@ -27,23 +27,13 @@
 		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource MainToolBarPanel}">
 			<ToolBar Style="{StaticResource MainToolBar}">
 				<Button
-					Name="ImportButton"
+					Name="EditButton"
 					HorizontalAlignment="Right"
-					Click="ImportButton_Click"
+					Click="SettingsEditNoteButton_Click"
 					Style="{StaticResource ToolBarButton}">
 					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_import}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Import..." Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Name="ExportButton"
-					HorizontalAlignment="Right"
-					Click="ExportButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_export}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Export..." Style="{StaticResource ButtonLabel}" />
+						<ContentControl Content="{StaticResource Icon_Edit}" Style="{StaticResource ButtonContentControl}" />
+						<Label Content="Edit Note" Style="{StaticResource ButtonLabel}" />
 					</StackPanel>
 				</Button>
 			</ToolBar>
@@ -79,6 +69,7 @@
 			BorderThickness="1"
 			SnapsToDevicePixels="True" />
 		<DataGrid
+			xmlns:local="clr-namespace:x360ce.App.Converters"
 			x:Name="MainDataGrid"
 			Grid.Row="1"
 			Height="Auto"
@@ -86,9 +77,19 @@
 			AutoGenerateColumns="False"
 			Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
 			IsReadOnly="True"
-			KeyDown="MainDataGrid_KeyDown"
 			SelectionChanged="MainDataGrid_SelectionChanged">
+			<DataGrid.Resources>
+				<converters:ChecksumToIdConverter x:Key="_ChecksumToIdConverter" />
+				<converters:MapToIntToDescription x:Key="_MapToIntToDescription" />
+
+			</DataGrid.Resources>
 			<DataGrid.Columns>
+				<DataGridTextColumn
+					Binding="{Binding PadSettingChecksum, Converter={StaticResource _ChecksumToIdConverter}}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="SID"
+					SortDirection="{x:Null}" />
 				<DataGridTextColumn
 					Binding="{Binding FileName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
@@ -99,7 +100,22 @@
 					Binding="{Binding FileProductName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
 					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Product Name" />
+					Header="File Title" />
+				<DataGridTextColumn
+					Binding="{Binding VendorName}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Vendor Name" />
+				<DataGridTextColumn
+					Binding="{Binding ProductName}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Device Name" />
+				<DataGridTextColumn
+					Binding="{Binding MapTo, Converter={StaticResource _MapToIntToDescription}}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Map To" />
 			</DataGrid.Columns>
 			<DataGrid.CellStyle>
 				<Style TargetType="DataGridCell">
@@ -111,4 +127,5 @@
 			<TextBlock x:Name="CommentLabel" Text="Note:" />
 		</StackPanel>
 	</Grid>
+
 </UserControl>
