Updated Issue and Main body control from Windows Forms to WPF/XAML.

--- a/x360ce.App.Beta/Controls/PadItem_General_XboxImageControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_General_XboxImageControl.xaml
@@ -57,7 +57,7 @@
 		</ResourceDictionary>
 	</UserControl.Resources>
 	<Viewbox>
-		<Grid x:Name="MainGrid" MouseMove="MainGrid_MouseMove">
+		<Grid x:Name="MainGrid">
 			<StackPanel Orientation="Vertical">
 				<Image
 					x:Name="TopPictureImage"
