--- a/x360ce.App.Beta/Controls/OptionsControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsControl.xaml
@@ -5,8 +5,8 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Width="800"
-	Height="500"
+	d:DesignHeight="500"
+	d:DesignWidth="800"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	mc:Ignorable="d">
 	<TabControl Name="MainTabControl" x:FieldModifier="public" TabStripPlacement="Top">
