Updated MainForm from Windows Forms to WPF/XAML.

--- a/x360ce.App.Beta/Controls/AxisMapControl.xaml
+++ b/x360ce.App.Beta/Controls/AxisMapControl.xaml
@@ -6,7 +6,7 @@
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-	mc:Ignorable="d">
+	mc:Ignorable="d" Loaded="UserControl_Loaded">
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
