--- a/x360ce.App.Beta/Controls/PadListControl.xaml
+++ b/x360ce.App.Beta/Controls/PadListControl.xaml
@@ -8,7 +8,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="120"
 	d:DesignWidth="640"
-	mc:Ignorable="d">
+	mc:Ignorable="d" Loaded="UserControl_Loaded">
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
