--- a/x360ce.App.Beta/MainControl.xaml
+++ b/x360ce.App.Beta/MainControl.xaml
@@ -5,10 +5,10 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Width="800"
-	Height="900"
 	HorizontalAlignment="Stretch"
 	VerticalAlignment="Stretch"
+	d:DesignHeight="900"
+	d:DesignWidth="800"
 	mc:Ignorable="d">
 	<UserControl.Resources>
 		<ResourceDictionary>
