--- a/x360ce.Engine/JocysCom/Controls/IssuesControl/IssuesControl.xaml
+++ b/x360ce.Engine/JocysCom/Controls/IssuesControl/IssuesControl.xaml
@@ -7,7 +7,8 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="250"
 	d:DesignWidth="800"
-	mc:Ignorable="d" Loaded="UserControl_Loaded">
+	Loaded="UserControl_Loaded"
+	mc:Ignorable="d">
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
