--- a/x360ce.App.Beta/Controls/PadItem_DInputControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DInputControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
 	x:Class="x360ce.App.Controls.PadItem_DInputControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -188,7 +188,7 @@
 				Grid.RowSpan="2"
 				Grid.Column="8"
 				Grid.ColumnSpan="2"
-				Margin="4,4,4,4"
+				Margin="3,3,3,3"
 				Style="{StaticResource DataGridReadOnly}">
 				<DataGrid.Columns>
 					<DataGridTextColumn
