--- a/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
 	x:Class="x360ce.App.Controls.PadItem_DPadControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -18,7 +18,7 @@
 		<StackPanel Orientation="Horizontal">
 			<CheckBox
 				x:Name="EnabledCheckBox"
-				Margin="4,4,4,4"
+				Margin="3,3,3,3"
 				VerticalAlignment="Top"
 				Content="Enabled" />
 
