--- a/x360ce.App.Beta/Controls/PadItem_General_XboxImageControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_General_XboxImageControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
 	x:Class="x360ce.App.Controls.PadItem_General_XboxImageControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -79,7 +79,7 @@
 				Style="{StaticResource Nav}">
 				<ContentControl
 					x:Name="LeftTriggerContentControl"
-					Margin="4,0,0,0"
+					Margin="3,0,0,0"
 					HorizontalAlignment="Left"
 					VerticalAlignment="Bottom"
 					Content="{StaticResource NavTriggerActive}"
@@ -93,7 +93,7 @@
 				</Button>
 				<ContentControl
 					x:Name="RightTriggerContentControl"
-					Margin="0,0,4,0"
+					Margin="0,0,3,0"
 					HorizontalAlignment="Right"
 					VerticalAlignment="Bottom"
 					Content="{StaticResource NavTriggerActive}"
